--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @question.title %></h1>
 <p><%= @question.body %></p>
-<p><%= @quetion.resolved %></p>
+<p><%= @question.resolved %></p>
 
 <div class="col=md-4">
   <%= link_to "Edit", edit_question_path(@question),class: 'btn btn-success' %>
