--- a/app/views/sponsored_posts/new.html.erb
+++ b/app/views/sponsored_posts/new.html.erb
@@ -1,2 +1,2 @@
-<h1>SponsoredPosts#new</h1>
-<p>Find me in app/views/sponsored_posts/new.html.erb</p>
+<h1><%="$#{@sponsored_post.price}:#{@sponsored_post.title}"%></h1>
+<p><%= @sponsored_post.copy></p>
