--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,8 @@
    <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
-         <%= link_to post.title, post %>
+         <%# topics_path %>
+         <%= link_to post.title, "/topics/#{post.topic.id}/posts/#{post.id}" %>
        </h4>
      </div>
    </div>
