--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -5,7 +5,7 @@
     </h4>
     <small>
       submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-      <%= post.commets.count %> Comments
+      <%= post.comments.count %> Comments
     </small>
   </div>
 </div>
